Changed some file names and added a new directory called views to contain html files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,4 @@ services:
       - ./src/public:/var/www/html
       - ./app:/var/www/app
       - ./data:/var/www/data
+      - ./views:/var/www/views
